[package]
name = "plonkit"
version = "0.1.3"
authors = [ "Roman Semenov <semenov.roma@gmail.com>", "Zhuo Zhang <mycinbrin@gmail.com>", "Haoyu LIN <chris.haoyul@gmail.com>" ]
description = "Library for working with circom circuits in plonk proof system"
homepage = "https://github.com/fluidex/plonkit"
license = "MIT"
repository = "https://github.com/fluidex/plonkit"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]

[[bin]]
name = "plonkit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = [ "plonk" ] } # active features depend on build type
bellman_vk_codegen = { git = "https://github.com/fluidex/solidity_plonk_verifier.git" }
byteorder = "1"
cfg-if = "1.0.0"
clap = { package = "clap-v3", version = "3.0.0-beta.1" } # todo: replace with official v3 when it's released to crates.io
env_logger = "0.8.2"
futures = "0.3"
hex-literal = "0.2.1"
itertools = "0.8.1"
log = "0.4.11"
num-bigint = "0.2.3"
num-traits = "0.2.8"
prost = { version = "0.7.0", optional = true }
rand = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "*", features = [ "rt-multi-thread", "signal", "sync" ], optional = true }
tonic = { version = "0.4.0", optional = true }

[build-dependencies]
cfg-if = "1.0.0"
tonic-build = "0.4.0"

[features]
default = [ "bellman_ce/multicore", "solidity" ]
solidity = [ ]
server = [ "tonic", "prost", "tokio" ]
windows_build = [ "server" ]
